@@ -7,6 +7,8 @@ listen-address: 127.0.0.1:9000
 
 log-facility: local0
 
+apop-only:  yes
+
 max-children:           16
 
 mailbox:                maildir:$(home)/Maildir /var/spool/mail/$(user)
